Added the csv file as Dataframe

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,354 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>Date Time</th>\n",
+       "      <th>profile</th>\n",
+       "      <th>company</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Start Date</th>\n",
+       "      <th>Stipend</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Apply by Date</th>\n",
+       "      <th>Offer</th>\n",
+       "      <th>Skills and Perks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5f9fc1e3fb43357b9094a297</td>\n",
+       "      <td>2020-11-02 13:52:57</td>\n",
+       "      <td>Fashion Design</td>\n",
+       "      <td>Enamor</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>5000 /month</td>\n",
+       "      <td>2 Months</td>\n",
+       "      <td>11 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5f9fc1e4fb43357b9094a298</td>\n",
+       "      <td>2020-11-02 13:52:59</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>Lakshmi Tools &amp; Components</td>\n",
+       "      <td>Hoskote</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>12000 /month</td>\n",
+       "      <td>1 Month</td>\n",
+       "      <td>16 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[\"Chemistry\",\"Certificate\",\" Letter of recomme...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5f9fc1e4fb43357b9094a299</td>\n",
+       "      <td>2020-11-02 13:53:00</td>\n",
+       "      <td>Photography</td>\n",
+       "      <td>Evineon Technologies</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>10000-12000 /month</td>\n",
+       "      <td>3 Months</td>\n",
+       "      <td>16 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[\"Flexible work hours\",\" Free snacks &amp; beverag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5f9fc1e5fb43357b9094a29a</td>\n",
+       "      <td>2020-11-02 13:53:00</td>\n",
+       "      <td>Social Media Marketing</td>\n",
+       "      <td>VisualNet Private Limited</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>7000 /month</td>\n",
+       "      <td>6 Months</td>\n",
+       "      <td>16 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[\"MS-Office\",\"Certificate\",\" Letter of recomme...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5f9fc1e6fb43357b9094a29b</td>\n",
+       "      <td>2020-11-02 13:53:01</td>\n",
+       "      <td>Business Development (Sales)</td>\n",
+       "      <td>DM Consulting (India) Private Limited</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>5000 /month</td>\n",
+       "      <td>6 Months</td>\n",
+       "      <td>16 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>508</th>\n",
+       "      <td>5f9fc3c3fb43357b9094a493</td>\n",
+       "      <td>2020-11-02 14:00:59</td>\n",
+       "      <td>Architecture</td>\n",
+       "      <td>Buildcom</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>5000-10000 /month</td>\n",
+       "      <td>2 Months</td>\n",
+       "      <td>9 Nov' 20</td>\n",
+       "      <td>Internship with job offer</td>\n",
+       "      <td>[\"AutoCAD\",\"Adobe Photoshop\",\"Autodesk Revit\",...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>509</th>\n",
+       "      <td>5f9fc3c4fb43357b9094a494</td>\n",
+       "      <td>2020-11-02 14:00:59</td>\n",
+       "      <td>Graphic Design</td>\n",
+       "      <td>Buildcom</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>5000-10000 /month</td>\n",
+       "      <td>2 Months</td>\n",
+       "      <td>7 Nov' 20</td>\n",
+       "      <td>Internship with job offer</td>\n",
+       "      <td>[\"Adobe Photoshop\",\"Adobe Illustrator\",\"Adobe ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>5f9fc3c5fb43357b9094a495</td>\n",
+       "      <td>2020-11-02 14:01:00</td>\n",
+       "      <td>Business Development (Sales)</td>\n",
+       "      <td>Webpulse Solution Private Limited</td>\n",
+       "      <td>Indore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>8000 /month +  Incentives</td>\n",
+       "      <td>6 Months</td>\n",
+       "      <td>3 Nov' 20</td>\n",
+       "      <td>Internship with job offer</td>\n",
+       "      <td>[\"Certificate\",\" Job offer\"]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>5f9fc3c6fb43357b9094a496</td>\n",
+       "      <td>2020-11-02 14:01:01</td>\n",
+       "      <td>Full-stack Development</td>\n",
+       "      <td>Kualify Services Private Limited</td>\n",
+       "      <td>Gurgaon</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>10000-15000 /month</td>\n",
+       "      <td>3 Months</td>\n",
+       "      <td>2 Nov' 20</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>[\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>5f9fc3c7fb43357b9094a497</td>\n",
+       "      <td>2020-11-02 14:01:02</td>\n",
+       "      <td>Big Data &amp; Full Stack Software Development</td>\n",
+       "      <td>Tercept Incorporation</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>Immediately</td>\n",
+       "      <td>15000-20000 /month</td>\n",
+       "      <td>3 Months</td>\n",
+       "      <td>2 Nov' 20</td>\n",
+       "      <td>Internship with job offer</td>\n",
+       "      <td>[\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>513 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          _id            Date Time  \\\n",
+       "0    5f9fc1e3fb43357b9094a297  2020-11-02 13:52:57   \n",
+       "1    5f9fc1e4fb43357b9094a298  2020-11-02 13:52:59   \n",
+       "2    5f9fc1e4fb43357b9094a299  2020-11-02 13:53:00   \n",
+       "3    5f9fc1e5fb43357b9094a29a  2020-11-02 13:53:00   \n",
+       "4    5f9fc1e6fb43357b9094a29b  2020-11-02 13:53:01   \n",
+       "..                        ...                  ...   \n",
+       "508  5f9fc3c3fb43357b9094a493  2020-11-02 14:00:59   \n",
+       "509  5f9fc3c4fb43357b9094a494  2020-11-02 14:00:59   \n",
+       "510  5f9fc3c5fb43357b9094a495  2020-11-02 14:01:00   \n",
+       "511  5f9fc3c6fb43357b9094a496  2020-11-02 14:01:01   \n",
+       "512  5f9fc3c7fb43357b9094a497  2020-11-02 14:01:02   \n",
+       "\n",
+       "                                        profile  \\\n",
+       "0                                Fashion Design   \n",
+       "1                                    Operations   \n",
+       "2                                   Photography   \n",
+       "3                        Social Media Marketing   \n",
+       "4                  Business Development (Sales)   \n",
+       "..                                          ...   \n",
+       "508                                Architecture   \n",
+       "509                              Graphic Design   \n",
+       "510                Business Development (Sales)   \n",
+       "511                      Full-stack Development   \n",
+       "512  Big Data & Full Stack Software Development   \n",
+       "\n",
+       "                                   company   Location   Start Date  \\\n",
+       "0                                   Enamor  Bangalore  Immediately   \n",
+       "1               Lakshmi Tools & Components    Hoskote  Immediately   \n",
+       "2                     Evineon Technologies  Bangalore  Immediately   \n",
+       "3                VisualNet Private Limited  Bangalore  Immediately   \n",
+       "4    DM Consulting (India) Private Limited  Bangalore  Immediately   \n",
+       "..                                     ...        ...          ...   \n",
+       "508                               Buildcom  Bangalore  Immediately   \n",
+       "509                               Buildcom  Bangalore  Immediately   \n",
+       "510      Webpulse Solution Private Limited     Indore  Immediately   \n",
+       "511       Kualify Services Private Limited    Gurgaon  Immediately   \n",
+       "512                  Tercept Incorporation  Bangalore  Immediately   \n",
+       "\n",
+       "                        Stipend  Duration Apply by Date  \\\n",
+       "0                   5000 /month  2 Months    11 Nov' 20   \n",
+       "1                  12000 /month   1 Month    16 Nov' 20   \n",
+       "2            10000-12000 /month  3 Months    16 Nov' 20   \n",
+       "3                   7000 /month  6 Months    16 Nov' 20   \n",
+       "4                   5000 /month  6 Months    16 Nov' 20   \n",
+       "..                          ...       ...           ...   \n",
+       "508           5000-10000 /month  2 Months     9 Nov' 20   \n",
+       "509           5000-10000 /month  2 Months     7 Nov' 20   \n",
+       "510   8000 /month +  Incentives  6 Months     3 Nov' 20   \n",
+       "511          10000-15000 /month  3 Months     2 Nov' 20   \n",
+       "512          15000-20000 /month  3 Months     2 Nov' 20   \n",
+       "\n",
+       "                         Offer  \\\n",
+       "0                   Internship   \n",
+       "1                   Internship   \n",
+       "2                   Internship   \n",
+       "3                   Internship   \n",
+       "4                   Internship   \n",
+       "..                         ...   \n",
+       "508  Internship with job offer   \n",
+       "509  Internship with job offer   \n",
+       "510  Internship with job offer   \n",
+       "511                 Internship   \n",
+       "512  Internship with job offer   \n",
+       "\n",
+       "                                      Skills and Perks  \n",
+       "0    [\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...  \n",
+       "1    [\"Chemistry\",\"Certificate\",\" Letter of recomme...  \n",
+       "2    [\"Flexible work hours\",\" Free snacks & beverag...  \n",
+       "3    [\"MS-Office\",\"Certificate\",\" Letter of recomme...  \n",
+       "4                                                   []  \n",
+       "..                                                 ...  \n",
+       "508  [\"AutoCAD\",\"Adobe Photoshop\",\"Autodesk Revit\",...  \n",
+       "509  [\"Adobe Photoshop\",\"Adobe Illustrator\",\"Adobe ...  \n",
+       "510                       [\"Certificate\",\" Job offer\"]  \n",
+       "511  [\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...  \n",
+       "512  [\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...  \n",
+       "\n",
+       "[513 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe = pd.read_csv(\"./BANGALORE.csv\")\n",
+    "dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                 0\n",
+       "Date Time           0\n",
+       "profile             0\n",
+       "company             0\n",
+       "Location            0\n",
+       "Start Date          0\n",
+       "Stipend             0\n",
+       "Duration            0\n",
+       "Apply by Date       0\n",
+       "Offer               0\n",
+       "Skills and Perks    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
