--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[513 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[360 rows x 11 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,17 +695,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe1 =dataframe.drop(columns=['_id', 'Date Time',  'company', 'Location', 'Start Date',\n",
+    "dataframe_copy1 =dataframe.drop(columns=['_id', 'Date Time',  'company', 'Location', 'Start Date',\n",
     "       'Stipend', 'Duration', 'Apply by Date', 'Offer']).copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -824,18 +824,18 @@
        "[513 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe1"
+    "dataframe_copy1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -855,18 +855,18 @@
        "Name: Skills and Perks, Length: 513, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe1[\"Skills and Perks\"]"
+    "dataframe_copy1[\"Skills and Perks\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,6 @@
        "      <th></th>\n",
        "      <th>profile</th>\n",
        "      <th>Skills and Perks</th>\n",
-       "      <th>Skills</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -916,35 +915,29 @@
        "      <th>0</th>\n",
        "      <td>Fashion Design</td>\n",
        "      <td>[\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...</td>\n",
-       "      <td>[\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Operations</td>\n",
-       "      <td>[\"Chemistry\",\"Certificate\",\" Letter of recomme...</td>\n",
        "      <td>[\"Chemistry\",\"Certificate\",\" Letter of recomme...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Photography</td>\n",
        "      <td>[\"Flexible work hours\",\" Free snacks &amp; beverag...</td>\n",
-       "      <td>[\"Flexible work hours\",\" Free snacks &amp; beverag...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Social Media Marketing</td>\n",
-       "      <td>[\"MS-Office\",\"Certificate\",\" Letter of recomme...</td>\n",
        "      <td>[\"MS-Office\",\"Certificate\",\" Letter of recomme...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Business Development (Sales)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -952,35 +945,30 @@
        "      <th>508</th>\n",
        "      <td>Architecture</td>\n",
        "      <td>[\"AutoCAD\",\"Adobe Photoshop\",\"Autodesk Revit\",...</td>\n",
-       "      <td>[\"AutoCAD\",\"Adobe Photoshop\",\"Autodesk Revit\",...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>509</th>\n",
        "      <td>Graphic Design</td>\n",
-       "      <td>[\"Adobe Photoshop\",\"Adobe Illustrator\",\"Adobe ...</td>\n",
        "      <td>[\"Adobe Photoshop\",\"Adobe Illustrator\",\"Adobe ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>510</th>\n",
        "      <td>Business Development (Sales)</td>\n",
        "      <td>[\"Certificate\",\" Job offer\"]</td>\n",
-       "      <td>[\"Certificate\",\" Job offer\"]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>511</th>\n",
        "      <td>Full-stack Development</td>\n",
-       "      <td>[\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...</td>\n",
        "      <td>[\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>512</th>\n",
        "      <td>Big Data &amp; Full Stack Software Development</td>\n",
        "      <td>[\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...</td>\n",
-       "      <td>[\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>513 rows × 3 columns</p>\n",
+       "<p>513 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -997,20 +985,7 @@
        "511                      Full-stack Development   \n",
        "512  Big Data & Full Stack Software Development   \n",
        "\n",
-       "                                      Skills and Perks  \\\n",
-       "0    [\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...   \n",
-       "1    [\"Chemistry\",\"Certificate\",\" Letter of recomme...   \n",
-       "2    [\"Flexible work hours\",\" Free snacks & beverag...   \n",
-       "3    [\"MS-Office\",\"Certificate\",\" Letter of recomme...   \n",
-       "4                                                   []   \n",
-       "..                                                 ...   \n",
-       "508  [\"AutoCAD\",\"Adobe Photoshop\",\"Autodesk Revit\",...   \n",
-       "509  [\"Adobe Photoshop\",\"Adobe Illustrator\",\"Adobe ...   \n",
-       "510                       [\"Certificate\",\" Job offer\"]   \n",
-       "511  [\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...   \n",
-       "512  [\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...   \n",
-       "\n",
-       "                                                Skills  \n",
+       "                                      Skills and Perks  \n",
        "0    [\"MS-Office\",\"Adobe Illustrator\",\"CorelDRAW\",\"...  \n",
        "1    [\"Chemistry\",\"Certificate\",\" Letter of recomme...  \n",
        "2    [\"Flexible work hours\",\" Free snacks & beverag...  \n",
@@ -1023,16 +998,88 @@
        "511  [\"CSS\",\"JavaScript\",\"Node.js\",\"Express.js\",\"Re...  \n",
        "512  [\"Java\",\"JavaScript\",\"Python\",\"Node.js\",\"Certi...  \n",
        "\n",
-       "[513 rows x 3 columns]"
+       "[513 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe1"
+    "dataframe_copy1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 513 entries, 0 to 512\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   profile           513 non-null    object\n",
+      " 1   Skills and Perks  513 non-null    object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 8.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataframe_copy1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis Conclusion \n",
+    "\n",
+    "- Most of the columns/features are well formated.\n",
+    "- Duplicate Values are present but are relevant\n",
+    "- No requirement of other columns except 'profile' 'Skills and Perks' thus dropping them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer()\n",
+    "matrix = vectorizer.fit_transform(dataframe_copy1[\"Skills and Perks\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(513, 221)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matrix.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosine_sim = cosine_similarity(matrix , matrix)\n"
    ]
   }
  ],
