Created a Recommendation Function

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1081,6 +1081,88 @@
    "source": [
     "cosine_sim = cosine_similarity(matrix , matrix)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_intership(skills):\n",
+    "    selected_skills = ', '.join(skills)\n",
+    "\n",
+    "    user_vector = vectorizer.transform([selected_skills])\n",
+    "    # print(\"User Vector shape:\", user_vector.shape)\n",
+    "    # print(\"Matrix shape:\", matrix.shape)\n",
+    "    cosine_sim_with_selected_skills = cosine_similarity(user_vector, matrix)\n",
+    "\n",
+    "    sim_scores = list(enumerate(cosine_sim_with_selected_skills[0]))\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    indices = [score[0] for score in sim_scores[:5]]\n",
+    "    recommendations = []\n",
+    "    for i in indices:\n",
+    "       recommendations.append({\"Internship\" : dataframe['profile'].iloc[i] , \"Company\" : dataframe[\"company\"].iloc[i] , \"Stipend\" : dataframe[\"Stipend\"].iloc[i] , \"Location\" : dataframe[\"Location\"].iloc[i] })\n",
+    "    \n",
+    "    return recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Internship': 'Mobile App Development', 'Company': 'Fangover Food Services Private Limited', 'Stipend': ' 2000 /month', 'Location': 'Bangalore'}, {'Internship': 'DevOps Engineering', 'Company': 'Applicate IT Solutions Private Limited', 'Stipend': ' 15000 /month', 'Location': 'Gurgaon'}, {'Internship': 'Web Development', 'Company': 'Divineshop Ecommerce Solution Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Chennai'}, {'Internship': 'Web Development', 'Company': 'Network Friendship Media Technology', 'Stipend': ' 9000 /month', 'Location': 'Bangalore'}, {'Internship': 'Web Development', 'Company': 'Seed Studio LLP', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_selected_skills = [\"AWS\"]\n",
+    "recommendations_for_user_skills = get_intership(user_selected_skills)\n",
+    "print(recommendations_for_user_skills ,end=\"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Internship': 'Web Development', 'Company': 'FirstHive'}, {'Internship': 'Web Development', 'Company': 'Inovexic'}, {'Internship': 'Web Development', 'Company': 'Buzet'}, {'Internship': 'Web Development', 'Company': 'SmallBzr'}, {'Internship': 'Web Development', 'Company': 'Protoezy Designs Private Limited'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_selected_skills = [\"HTMl\"]\n",
+    "recommendations_for_user_skills = get_intership(user_selected_skills)\n",
+    "print(recommendations_for_user_skills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'Internship': 'Big Data Development And Testing', 'Company': 'Blismos Solutions Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}, {'Internship': 'GIS Engineering', 'Company': 'Satyukt Analytics Private Limited', 'Stipend': ' 10000 /month', 'Location': 'Bangalore'}, {'Internship': 'Subject Expert For Creating Tutorials (Python)', 'Company': 'Coursechamps Internet Ventures Private Limited', 'Stipend': ' 18000 /month', 'Location': 'Bangalore'}, {'Internship': 'Test Ops Engineering', 'Company': 'Flux', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}, {'Internship': 'Python Development', 'Company': 'Fin-School Education LLP', 'Stipend': ' 10000 /month', 'Location': 'Bangalore'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_selected_skills = [\"Python\"]\n",
+    "recommendations_for_user_skills = get_intership(user_selected_skills)\n",
+    "print(recommendations_for_user_skills)"
+   ]
   }
  ],
  "metadata": {
