modified the recommendation function

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "[513 rows x 11 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "[360 rows x 11 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "[513 rows x 2 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "Name: Skills and Perks, Length: 513, dtype: object"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "[513 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,40 +1102,101 @@
     "    indices = [score[0] for score in sim_scores[:5]]\n",
     "    recommendations = []\n",
     "    for i in indices:\n",
-    "       recommendations.append({\"Internship\" : dataframe['profile'].iloc[i] , \"Company\" : dataframe[\"company\"].iloc[i] , \"Stipend\" : dataframe[\"Stipend\"].iloc[i] , \"Location\" : dataframe[\"Location\"].iloc[i] })\n",
+    "       recommendations.append({\"Internship\" : dataframe['profile'].iloc[i] , \"Company\" : dataframe[\"company\"].iloc[i] , \"Stipend\" : dataframe[\"Stipend\"].iloc[i] , \"Location\" : dataframe[\"Location\"].iloc[i] ,\"Start\" : dataframe[\"Start Date\"].iloc[i], \"Duration\" : dataframe[\"Duration\"].iloc[i] , \"Offer\" : dataframe[\"Offer\"].iloc[i]})\n",
     "    \n",
     "    return recommendations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Internship': 'Mobile App Development', 'Company': 'Fangover Food Services Private Limited', 'Stipend': ' 2000 /month', 'Location': 'Bangalore'}, {'Internship': 'DevOps Engineering', 'Company': 'Applicate IT Solutions Private Limited', 'Stipend': ' 15000 /month', 'Location': 'Gurgaon'}, {'Internship': 'Web Development', 'Company': 'Divineshop Ecommerce Solution Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Chennai'}, {'Internship': 'Web Development', 'Company': 'Network Friendship Media Technology', 'Stipend': ' 9000 /month', 'Location': 'Bangalore'}, {'Internship': 'Web Development', 'Company': 'Seed Studio LLP', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}]\n"
+      "{'Internship': 'Mobile App Development', 'Company': 'Fangover Food Services Private Limited', 'Stipend': ' 2000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'DevOps Engineering', 'Company': 'Applicate IT Solutions Private Limited', 'Stipend': ' 15000 /month', 'Location': 'Gurgaon', 'Duration': '3 Months', 'Offer': 'Internship with job offer'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Divineshop Ecommerce Solution Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Chennai', 'Duration': '4 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Network Friendship Media Technology', 'Stipend': ' 9000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Seed Studio LLP', 'Stipend': ' 5000 /month', 'Location': 'Bangalore', 'Duration': '4 Months', 'Offer': 'Internship'}\n"
      ]
     }
    ],
    "source": [
     "user_selected_skills = [\"AWS\"]\n",
     "recommendations_for_user_skills = get_intership(user_selected_skills)\n",
-    "print(recommendations_for_user_skills ,end=\"\\n\")\n"
+    "\n",
+    "for i in recommendations_for_user_skills:\n",
+    "    print(i)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Internship': 'Web Development', 'Company': 'FirstHive'}, {'Internship': 'Web Development', 'Company': 'Inovexic'}, {'Internship': 'Web Development', 'Company': 'Buzet'}, {'Internship': 'Web Development', 'Company': 'SmallBzr'}, {'Internship': 'Web Development', 'Company': 'Protoezy Designs Private Limited'}]\n"
+      "[{'Internship': 'Web Development', 'Company': 'FirstHive', 'Stipend': ' 15000-20000 /month', 'Location': 'Bangalore', 'Duration': '6 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Web Development', 'Company': 'Inovexic', 'Stipend': ' 8000-15000 /month', 'Location': 'Bangalore', 'Duration': '3 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Web Development', 'Company': 'Buzet', 'Stipend': ' 10000 /month', 'Location': 'Bangalore', 'Duration': '3 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Web Development', 'Company': 'SmallBzr', 'Stipend': ' 5000-6000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Web Development', 'Company': 'Protoezy Designs Private Limited', 'Stipend': ' 10000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}]\n"
      ]
     }
    ],
@@ -1147,14 +1208,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Internship': 'Big Data Development And Testing', 'Company': 'Blismos Solutions Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}, {'Internship': 'GIS Engineering', 'Company': 'Satyukt Analytics Private Limited', 'Stipend': ' 10000 /month', 'Location': 'Bangalore'}, {'Internship': 'Subject Expert For Creating Tutorials (Python)', 'Company': 'Coursechamps Internet Ventures Private Limited', 'Stipend': ' 18000 /month', 'Location': 'Bangalore'}, {'Internship': 'Test Ops Engineering', 'Company': 'Flux', 'Stipend': ' 5000 /month', 'Location': 'Bangalore'}, {'Internship': 'Python Development', 'Company': 'Fin-School Education LLP', 'Stipend': ' 10000 /month', 'Location': 'Bangalore'}]\n"
+      "[{'Internship': 'Big Data Development And Testing', 'Company': 'Blismos Solutions Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Bangalore', 'Duration': '3 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'GIS Engineering', 'Company': 'Satyukt Analytics Private Limited', 'Stipend': ' 10000 /month', 'Location': 'Bangalore', 'Duration': '6 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Subject Expert For Creating Tutorials (Python)', 'Company': 'Coursechamps Internet Ventures Private Limited', 'Stipend': ' 18000 /month', 'Location': 'Bangalore', 'Duration': '3 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Test Ops Engineering', 'Company': 'Flux', 'Stipend': ' 5000 /month', 'Location': 'Bangalore', 'Duration': '6 Months', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}, {'Internship': 'Python Development', 'Company': 'Fin-School Education LLP', 'Stipend': ' 10000 /month', 'Location': 'Bangalore', 'Duration': '1 Month', 'Offer': 0                     Internship\n",
+      "1                     Internship\n",
+      "2                     Internship\n",
+      "3                     Internship\n",
+      "4                     Internship\n",
+      "                 ...            \n",
+      "508    Internship with job offer\n",
+      "509    Internship with job offer\n",
+      "510    Internship with job offer\n",
+      "511                   Internship\n",
+      "512    Internship with job offer\n",
+      "Name: Offer, Length: 513, dtype: object}]\n"
      ]
     }
    ],
