changed the corse origins

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,18 +1109,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Internship': 'Mobile App Development', 'Company': 'Fangover Food Services Private Limited', 'Stipend': ' 2000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
-      "{'Internship': 'DevOps Engineering', 'Company': 'Applicate IT Solutions Private Limited', 'Stipend': ' 15000 /month', 'Location': 'Gurgaon', 'Duration': '3 Months', 'Offer': 'Internship with job offer'}\n",
-      "{'Internship': 'Web Development', 'Company': 'Divineshop Ecommerce Solution Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Chennai', 'Duration': '4 Months', 'Offer': 'Internship'}\n",
-      "{'Internship': 'Web Development', 'Company': 'Network Friendship Media Technology', 'Stipend': ' 9000 /month', 'Location': 'Bangalore', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
-      "{'Internship': 'Web Development', 'Company': 'Seed Studio LLP', 'Stipend': ' 5000 /month', 'Location': 'Bangalore', 'Duration': '4 Months', 'Offer': 'Internship'}\n"
+      "{'Internship': 'Mobile App Development', 'Company': 'Fangover Food Services Private Limited', 'Stipend': ' 2000 /month', 'Location': 'Bangalore', 'Start': 'Immediately', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'DevOps Engineering', 'Company': 'Applicate IT Solutions Private Limited', 'Stipend': ' 15000 /month', 'Location': 'Gurgaon', 'Start': 'Immediately', 'Duration': '3 Months', 'Offer': 'Internship with job offer'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Divineshop Ecommerce Solution Private Limited', 'Stipend': ' 5000 /month', 'Location': 'Chennai', 'Start': 'Immediately', 'Duration': '4 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Network Friendship Media Technology', 'Stipend': ' 9000 /month', 'Location': 'Bangalore', 'Start': 'Immediately', 'Duration': '2 Months', 'Offer': 'Internship'}\n",
+      "{'Internship': 'Web Development', 'Company': 'Seed Studio LLP', 'Stipend': ' 5000 /month', 'Location': 'Bangalore', 'Start': 'Immediately', 'Duration': '4 Months', 'Offer': 'Internship'}\n"
      ]
     }
    ],
